# luna-ai

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  LICENSE  README.md  debug_audio.py  flake.nix  main.py  pyproject.toml  pytest.ini  requirements.txt  shell.nix  simple_audio_test.py  test.res
luna/: __init__.py  agent.py  config.py  events.py  listen.py  main.py  prompts.py  speech.py  tools.py  ui.py
luna/core/: __init__.py  config.py  di.py  events.py  logging.py  types.py
luna/services/: __init__.py  agent.py  audio.py  llm.py  tts.py
luna/tools/: __init__.py  base.py  desktop.py
luna/ui/: __init__.py  logging_handler.py  terminal.py
scripts/: list_audio_devices.py
tests/: conftest.py  test_agent.py  test_tools.py
tests/core/: test_events.py
tests/tools/: test_base.py
